--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
-  <title>DungeonDragonsClient</title>
+  <title>Donjons et Dragons</title>
   <base href="/">
 
   <meta name="viewport"
